2009-06-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tools/sogo-contacts-removedoubles.m: added code to avoid
	removing cards referenced in vlists.

2009-06-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -postCalDAVEventRequestTo:from:]): remove
	alarms from invitation and set organizer of master event when
	dealing with a recurrent event.

2009-06-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tools/sogo-contacts-removedoubles.m: new maintenance utility
	that removes double records in specified addressbooks.

	* Tools/sogo-contacts-checkdoubles.m: new maintenance utility that
	helps determine which contact folders need cleanup.

2009-06-02  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (_enforceTimeLimitOnFilter):
	Rewrote algorithm, fixed cyclic events issue.
	* UI/WebServerResources/UIxAttendeesEditor.js: Fixed update bug on "enter"
	* UI/Templates/SchedulerUI/UIxAttendeesEditor.wox: Removed next/prev hour
	and zoom buttons

2009-06-02  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Updated the documentation (version change, Russian
	language addition and documentation of the WOApplicationRedirectURL
	parameter)

2009-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m (-deleteFolderAction):
	renamed to deleteAction to match the methods in UI/Common/*Actions.m

	* UI/Common/UIxFolderActions.m (-): removed useless method since
	SOGoFolders can use the "delete" web method to achieve the same result.

	* SoObjects/SOGo/SOGoPermissions.m: declared new "Delete Object"
	permission.

2009-06-01  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/UIxContactsUserFolders.js (onSearchFormSubmit): 
	Fixed encoding issue/crash.
	* SoObjects/Appointments/SOGoAppointmentFolder.m (_parseCalendarFilter): 
	Added support for default SOGoDAVCalendarStartTimeLimit, which is the
	maximum number of days for dav queries.